# deadweight

./: CMakeLists.txt  README.md
assets/shaders/: light.fs  light.vs
src/: main.cpp
src/core/: app.cpp  app.hpp  audio_loaders.hpp  font_loader.hpp  loader_base.hpp  loaders.hpp  render_stack.cpp  render_stack.hpp  renderable_2D.hpp  renderable_3D.hpp  renderable_UI.hpp  renderable_base.hpp  renderable_wrapper.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  scene_handler.cpp  scene_handler.hpp  texture_loader.hpp  transformable.hpp  updatable.hpp
src/data/: criteria.hpp  criteria_deliver.hpp  faction.hpp  factions.cpp  factions.hpp  game_state_info.hpp  job.hpp  planet.hpp  player_info.hpp  player_vessel.hpp  space_coords.hpp  storable.hpp  world.cpp  world.hpp  world_map.cpp  world_map.hpp
src/systems/: cockpit_controller.cpp  cockpit_controller.hpp  job_handler.cpp  job_handler.hpp  player_vessel_moved_listener.hpp  terminal.cpp  terminal.hpp  terminal_commands.hpp  world_renderer.hpp
src/ui/: cockpit_view.cpp  cockpit_view.hpp  star_map_view.hpp  star_map_world.hpp  terminal_view.hpp
src/utils/: string_utils.hpp
